# sdl-study

./: CMakeLists.txt  main.c
